# symgp

./: .gitignore  Makefile  NOTICE  NOTICE.md  README.md  pyproject.toml
symgp/: __init__.py  format.py  individual.py  model.py  npf.py  operator.py  specifications.py
symgp/genetic/: __init__.py  genop.py  mut.py  rec.py
symgp/npf/: __init__.py  functions.py  utils.py
symgp/operators/: __init__.py  commonrules.py  datatypes.py  operator.py  oprules.py  rules.py  specifications.py
